--- a/docker/devenv/docker-compose.yaml
+++ b/docker/devenv/docker-compose.yaml
@@ -70,7 +70,7 @@ services:
       - PENPOT_LDAP_ATTRS_PHOTO=jpegPhoto
 
   minio:
-    image: "minio/minio:latest"
+    image: "minio/minio:RELEASE.2023-11-11T08-14-41Z"
     command: minio server /mnt/data --console-address ":9001"
 
     volumes:
