--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,13 @@
   "name": "backend",
   "version": "1.0.0",
   "license": "MPL-2.0",
+  "author": "Kaleidos INC",
+  "private": true,
+  "packageManager": "yarn@4.0.2",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/penpot/penpot"
+  },
   "dependencies": {
     "luxon": "^3.4.2",
     "sax": "^1.2.4"
@@ -10,5 +17,9 @@
     "nodemon": "^3.0.1",
     "source-map-support": "^0.5.21",
     "ws": "^8.13.0"
+  },
+  "scripts": {
+    "fmt:clj:check": "cljfmt check --parallel=false src/ test/",
+    "fmt:clj": "cljfmt fix --parallel=true src/ test/"
   }
 }
