--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "@storybook/react": "^7.5.3",
     "@storybook/react-vite": "^7.5.3",
     "@storybook/testing-library": "^0.2.2",
+    "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.15",
     "concurrently": "^8.2.2",
     "cypress": "^10.3.0",
