--- a/common/package.json
+++ b/common/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "penpot-common",
+  "name": "common",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MPL-2.0",
@@ -17,5 +17,6 @@
     "shadow-cljs": "2.25.10",
     "source-map-support": "^0.5.21",
     "ws": "^8.13.0"
-  }
+  },
+  "packageManager": "yarn@4.0.2"
 }
