--- a/docker/devenv/Dockerfile
+++ b/docker/devenv/Dockerfile
@@ -3,7 +3,7 @@ LABEL maintainer="Andrey Antukh <niwi@niwi.nz>"
 
 ARG DEBIAN_FRONTEND=noninteractive
 
-ENV NODE_VERSION=v20.9.0 \
+ENV NODE_VERSION=v20.10.0 \
     CLOJURE_VERSION=1.11.1.1347 \
     CLJKONDO_VERSION=2023.09.07 \
     BABASHKA_VERSION=1.3.184 \
@@ -157,7 +157,7 @@ RUN set -eux; \
     cd /usr/local/nodejs; \
     tar -xf /tmp/nodejs.tar.xz --strip-components=1; \
     chown -R root /usr/local/nodejs; \
-    /usr/local/nodejs/bin/npm install -g yarn; \
+    corepack enable; \
     rm -rf /tmp/nodejs.tar.xz;
 
 RUN set -ex; \
@@ -199,7 +199,6 @@ RUN set -ex; \
     cd /usr/local/bin; \
     tar -xf /tmp/babashka.tar.gz; \
     rm -rf /tmp/babashka.tar.gz;
-
 
 # Install minio client
 RUN set -ex; \
