--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "build:styles": "gulp build:styles",
     "build:assets": "gulp build:assets",
     "build:copy": "gulp build:copy",
+    "storybook": "storybook dev -p 6006",
     "storybook:compile": "gulp template:storybook && clojure -M:dev:shadow-cljs compile storybook",
     "storybook:watch": "npm run storybook:compile && concurrently \"clojure -M:dev:shadow-cljs watch storybook\" \"storybook dev -p 6006\"",
     "storybook:build": "npm run storybook:compile && storybook build"
