:sparkles: Improve code organization for better integration with storybook

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
   "browserslist": [
     "defaults"
   ],
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/penpot/penpot"
@@ -22,7 +23,7 @@
     "lint:scss": "yarn run prettier -c resources/styles -c src/**/*.scss",
     "lint:scss:fix": "yarn run prettier -c resources/styles -c src/**/*.scss -w",
     "lint:clj": "clj-kondo --parallel --lint src/",
-    "test:run": "node target/tests.js",
+    "test:run": "node target/tests.cjs",
     "test:watch": "clojure -M:dev:shadow-cljs watch test",
     "test": "yarn run test:compile && yarn run test:run",
     "gulp:watch": "gulp watch",
@@ -38,17 +39,17 @@
     "storybook:build": "npm run storybook:compile && storybook build"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.5.3",
-    "@storybook/addon-interactions": "^7.5.3",
-    "@storybook/addon-links": "^7.5.3",
-    "@storybook/addon-onboarding": "^1.0.8",
-    "@storybook/blocks": "^7.5.3",
-    "@storybook/react": "^7.5.3",
-    "@storybook/react-vite": "^7.5.3",
+    "@storybook/addon-essentials": "^7.6.6",
+    "@storybook/addon-interactions": "^7.6.6",
+    "@storybook/addon-links": "^7.6.6",
+    "@storybook/addon-onboarding": "^1.0.10",
+    "@storybook/blocks": "^7.6.6",
+    "@storybook/react": "^7.6.6",
+    "@storybook/react-vite": "^7.6.6",
     "@storybook/testing-library": "^0.2.2",
     "@types/node": "^20.10.5",
     "animate.css": "^4.1.1",
-    "autoprefixer": "^10.4.15",
+    "autoprefixer": "^10.4.16",
     "concurrently": "^8.2.2",
     "gettext-parser": "^7.0.1",
     "gulp": "4.0.2",
@@ -56,7 +57,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-gzip": "^1.4.2",
     "gulp-mustache": "^5.0.0",
-    "gulp-postcss": "^9.0.0",
+    "gulp-postcss": "^9.0.1",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
@@ -64,39 +65,38 @@
     "map-stream": "0.0.7",
     "marked": "^7.0.5",
     "mkdirp": "^3.0.1",
-    "nodemon": "^3.0.1",
+    "nodemon": "^3.0.2",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.29",
+    "postcss": "^8.4.32",
     "postcss-clean": "^1.2.2",
-    "prettier": "^3.0.3",
+    "prettier": "^3.1.1",
     "prop-types": "^15.8.1",
-    "rimraf": "^5.0.1",
-    "sass": "^1.66.1",
+    "rimraf": "^5.0.5",
+    "sass": "^1.69.5",
     "shadow-cljs": "2.26.2",
-    "storybook": "^7.5.3",
     "typescript": "^5.3.3",
-    "vite": "^5.0.2"
+    "vite": "^5.0.10"
   },
   "dependencies": {
     "date-fns": "^2.30.0",
     "draft-js": "^0.11.7",
     "eventsource-parser": "^1.1.1",
-    "highlight.js": "^11.8.0",
-    "js-beautify": "^1.14.9",
+    "highlight.js": "^11.9.0",
+    "js-beautify": "^1.14.11",
     "jszip": "^3.10.1",
-    "luxon": "^3.4.2",
+    "luxon": "^3.4.4",
     "mousetrap": "^1.6.5",
     "opentype.js": "^1.3.4",
     "postcss-modules": "^6.0.0",
     "randomcolor": "^0.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-virtualized": "^9.22.3",
+    "react-virtualized": "^9.22.5",
     "rxjs": "8.0.0-alpha.13",
-    "sax": "^1.2.4",
+    "sax": "^1.3.0",
     "source-map-support": "^0.5.21",
     "tdigest": "^0.1.2",
-    "ua-parser-js": "^1.0.32",
+    "ua-parser-js": "^1.0.37",
     "xregexp": "^5.1.1"
   }
 }
