--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,7 @@ name: Publish docker image
 
 on:
   push:
-    branches: [ tokens-studio-develop ]
+    branches: [ token-studio-develop ]
 
 jobs:
   build:
