Chart does auto inject the release name

--- a/.gimlet/penpot-prod.yaml
+++ b/.gimlet/penpot-prod.yaml
@@ -128,6 +128,8 @@ manifests: |
             - penpot.tokens.studio
       config:
         publicURI: https://penpot.tokens.studio
+        redis:
+          host: penpot-redis-headless.penpot.svc.cluster.local
         postgresql:
           host: penpot-db-rw
           database: penpot
