:sparkles: Improve yarn setup on devenv
And update yarn version to 4.2.2

--- a/docker/devenv/Dockerfile
+++ b/docker/devenv/Dockerfile
@@ -159,6 +159,7 @@ RUN set -eux; \
     tar -xf /tmp/nodejs.tar.gz --strip-components=1; \
     chown -R root /usr/local/nodejs; \
     corepack enable; \
+    corepack install -g yarn@4.2.2; \
     rm -rf /tmp/nodejs.tar.gz;
 
 RUN set -ex; \
