--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "license": "MPL-2.0",
   "author": "Kaleidos INC",
   "private": true,
-  "packageManager": "yarn@4.0.2",
+  "packageManager": "yarn@4.2.2",
   "browserslist": [
     "defaults"
   ],
@@ -37,7 +37,7 @@
     "storybook:build": "npm run storybook:compile && storybook build"
   },
   "devDependencies": {
-    "@playwright/test": "^1.42.1",
+    "@playwright/test": "1.42.1",
     "@storybook/addon-essentials": "^7.6.17",
     "@storybook/addon-interactions": "^7.6.17",
     "@storybook/addon-links": "^7.6.17",
@@ -99,8 +99,8 @@
     "opentype.js": "^1.3.4",
     "postcss-modules": "^6.0.0",
     "randomcolor": "^0.6.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-virtualized": "^9.22.5",
     "rxjs": "8.0.0-alpha.14",
     "sax": "^1.3.0",
