:sparkles: Add playwright dependencies to devenv docker

--- a/docker/devenv/Dockerfile
+++ b/docker/devenv/Dockerfile
@@ -160,6 +160,7 @@ RUN set -eux; \
     chown -R root /usr/local/nodejs; \
     corepack enable; \
     corepack install -g yarn@4.2.2; \
+    npx playwright install --with-deps chromium; \
     rm -rf /tmp/nodejs.tar.gz;
 
 RUN set -ex; \
