--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,7 +50,7 @@
     "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.17",
     "concurrently": "^8.2.2",
-    "draft-js": "git+https://github.com/penpot/draft-js.git",
+    "draft-js": "git+https://github.com/penpot/draft-js.git#commit=4a99b2a6020b2af97f6dc5fa1b4275ec16b559a0",
     "express": "^4.19.2",
     "fancy-log": "^2.0.0",
     "gettext-parser": "^8.0.0",
