--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,42 +32,42 @@ jobs:
       - run: clj-kondo --version
 
       - run:
-          name: "fmt check backend [clj]"
+          name: "backend fmt check"
           working_directory: "./backend"
           command: |
             yarn install
             yarn run fmt:clj:check
 
       - run:
-          name: "fmt check exporter [clj]"
+          name: "exporter fmt check"
           working_directory: "./exporter"
           command: |
             yarn install
             yarn run fmt:clj:check
 
       - run:
-          name: "fmt check common [clj]"
+          name: "common fmt check"
           working_directory: "./common"
           command: |
             yarn install
             yarn run fmt:clj:check
 
       - run:
-          name: "fmt check frontend [clj]"
+          name: "frontend fmt check"
           working_directory: "./frontend"
           command: |
             yarn install
             yarn run fmt:clj:check
 
       - run:
-          name: common lint
+          name: "common linter check"
           working_directory: "./common"
           command: |
             yarn install
             yarn run lint:clj
 
       - run:
-          name: frontend lint
+          name: "frontend linter check"
           working_directory: "./frontend"
           command: |
             yarn install
@@ -75,14 +75,14 @@ jobs:
             yarn run lint:clj
 
       - run:
-          name: backend lint
+          name: "backend linter check"
           working_directory: "./backend"
           command: |
             yarn install
             yarn run lint:clj
 
       - run:
-          name: exporter lint
+          name: "exporter linter check"
           working_directory: "./exporter"
           command: |
             yarn install
@@ -102,15 +102,15 @@ jobs:
             yarn install
             yarn test
 
-      # - run:
-      #     name: "frontend integration tests"
-      #     working_directory: "./frontend"
-      #     command: |
-      #       yarn install
-      #       yarn run compile
-      #       clojure -M:dev:shadow-cljs compile main
-      #       yarn playwright install --with-deps chromium
-      #       yarn e2e:test
+      - run:
+          name: "frontend integration tests"
+          working_directory: "./frontend"
+          command: |
+            yarn install
+            yarn run compile
+            yarn run compile:cljs
+            yarn playwright install --with-deps chromium
+            yarn e2e:test
 
       - run:
           name: "backend tests"
