--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -71,7 +71,7 @@ jobs:
         with:
           ENV: "prod"
           APP: "penpot"
-          DEPLOY: "true"
+          WAIT: "true"
   smoke:
     runs-on: ubuntu-latest
     needs:
