Try force deploy branch PR

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -65,5 +65,6 @@ jobs:
       - name: 🍍 Deploy with Gimlet
         uses: gimlet-io/gimlet-artifact-shipper-action@v0.8.3
         env:
-            GIMLET_SERVER: ${{ secrets.GIMLET_SERVER }}
-            GIMLET_TOKEN: ${{ secrets.GIMLET_TOKEN }}
+          GIMLET_SERVER: ${{ secrets.GIMLET_SERVER }}
+          GIMLET_TOKEN: ${{ secrets.GIMLET_TOKEN }}
+          DEPLOY: 'true'
