--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,7 +31,7 @@ jobs:
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
-        password: ${{ secrets.GHCR_TOKEN  }}
+        password: ${{ secrets.GITHUB_TOKEN  }}
 
     - name: Docker meta
       id: meta
