Be explicit in tagging for prs

--- a/.gimlet/penpot-pr.yaml
+++ b/.gimlet/penpot-pr.yaml
@@ -14,7 +14,7 @@ values:
   image:
     pullPolicy: IfNotPresent
     repository: ghcr.io/tokens-studio/tokens-studio-for-penpot
-    tag: 'frontend-{{ .SHA }}'
+    tag: 'frontend-pr-{{ .SHA }}'
   ingress:     
     hosts:
       - host: "{{ .BRANCH | sanitizeDNSName }}.penpot.staging.tokens.studio"
