--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,6 +55,7 @@
     "draft-js": "git+https://github.com/penpot/draft-js.git#commit=4a99b2a6020b2af97f6dc5fa1b4275ec16b559a0",
     "express": "^4.19.2",
     "fancy-log": "^2.0.0",
+    "getopts": "^2.3.0",
     "gettext-parser": "^8.0.0",
     "gulp": "4.0.2",
     "gulp-concat": "^2.6.1",
