--- a/frontend/package.json
+++ b/frontend/package.json
@@ -106,6 +106,7 @@
     "rxjs": "8.0.0-alpha.14",
     "sax": "^1.3.0",
     "source-map-support": "^0.5.21",
+    "style-dictionary": "patch:style-dictionary@npm%3A4.0.0-prerelease.36#~/.yarn/patches/style-dictionary-npm-4.0.0-prerelease.36-55c0fc33bd.patch",
     "tdigest": "^0.1.2",
     "ua-parser-js": "^1.0.37",
     "xregexp": "^5.1.1"
