--- a/frontend/package.json
+++ b/frontend/package.json
@@ -90,6 +90,7 @@
     "workerpool": "^9.1.0"
   },
   "dependencies": {
+    "@tokens-studio/sd-transforms": "^0.16.1",
     "date-fns": "^3.3.1",
     "eventsource-parser": "^1.1.2",
     "highlight.js": "^11.9.0",
